--- a/app/web/template/certificate_provider_details.gohtml
+++ b/app/web/template/certificate_provider_details.gohtml
@@ -24,6 +24,7 @@
             </div>
           </fieldset>
         </div>
+        {{ template "csrf-field" . }}
       </form>
     </div>
   </div>
