--- a/app/web/template/choose_people_to_notify.gohtml
+++ b/app/web/template/choose_people_to_notify.gohtml
@@ -21,6 +21,7 @@
             </div>
           </fieldset>
         </div>
+        {{ template "csrf-field" . }}
       </form>
     </div>
   </div>
