--- a/app/web/template/choose_people_to_notify_summary.gohtml
+++ b/app/web/template/choose_people_to_notify_summary.gohtml
@@ -41,6 +41,7 @@
           <div class="govuk-button-group">
             {{ template "continue-button" . }}
           </div>
+          {{ template "csrf-field" . }}
         </form>
       {{ end }}
     </div>
