--- a/app/web/template/do_you_want_to_notify_people.gohtml
+++ b/app/web/template/do_you_want_to_notify_people.gohtml
@@ -39,6 +39,7 @@
         </div>
 
         {{ template "continue-button" . }}
+        {{ template "csrf-field" . }}
       </form>
     </div>
   </div>
