--- a/app/web/template/how_do_you_know_your_certificate_provider.gohtml
+++ b/app/web/template/how_do_you_know_your_certificate_provider.gohtml
@@ -68,6 +68,7 @@
 
           {{ template "continue-button" . }}
         </fieldset>
+        {{ template "csrf-field" . }}
       </form>
     </div>
   </div>
