--- a/app/web/template/how_long_have_you_known_certificate_provider.gohtml
+++ b/app/web/template/how_long_have_you_known_certificate_provider.gohtml
@@ -24,6 +24,7 @@
         </div>
 
         {{ template "continue-button" . }}
+        {{ template "csrf-field" . }}
       </form>
     </div>
   </div>
