--- a/app/web/template/how_should_replacement_attorneys_make_decisions.gohtml
+++ b/app/web/template/how_should_replacement_attorneys_make_decisions.gohtml
@@ -66,11 +66,12 @@
               </div>
             </div>
           </fieldset>
-          
+
           <div class="govuk-button-group govuk-!-margin-top-4">
             {{ template "continue-button" . }}
           </div>
         </div>
+        {{ template "csrf-field" . }}
       </form>
     </div>
   </div>
