--- a/app/web/template/how_would_you_like_to_be_contacted.gohtml
+++ b/app/web/template/how_would_you_like_to_be_contacted.gohtml
@@ -52,6 +52,7 @@
             {{ template "continue-button" . }}
           </fieldset>
         </div>
+        {{ template "csrf-field" . }}
       </form>
     </div>
   </div>
