--- a/app/web/template/identity_with_yoti_callback.gohtml
+++ b/app/web/template/identity_with_yoti_callback.gohtml
@@ -28,6 +28,7 @@
 
       <form novalidate method="post">
         {{ template "continue-button" . }}
+        {{ template "csrf-field" . }}
       </form>
     </div>
   </div>
