--- a/app/web/template/remove_attorney.gohtml
+++ b/app/web/template/remove_attorney.gohtml
@@ -31,6 +31,8 @@
           <div class="govuk-button-group">
             {{ template "continue-button" . }}
           </div>
+          {{ template "csrf-field" . }}
+        </fieldset>
       </form>
     </div>
   </div>
