--- a/app/web/template/sign_your_lpa.gohtml
+++ b/app/web/template/sign_your_lpa.gohtml
@@ -73,6 +73,7 @@
             {{ tr .App "submitSignature" }}
           </button>
         </div>
+        {{ template "csrf-field" . }}
       </form>
     </div>
   </div>
