--- a/app/web/template/when_can_the_lpa_be_used.gohtml
+++ b/app/web/template/when_can_the_lpa_be_used.gohtml
@@ -33,12 +33,15 @@
           </fieldset>
         </div>
 
+        {{ template "csrf-field" . }}
+
         <div class="govuk-button-group">
           {{ template "continue-button" . }}
           {{ if not .Completed }}
             <button type="submit" name="answer-later" value="1" class="govuk-button govuk-button--secondary">{{ tr .App "answerLater" }}</button>
           {{ end }}
         </div>
+        {{ template "csrf-field" . }}
       </form>
     </div>
   </div>
