--- a/app/web/template/who_is_the_lpa_for.gohtml
+++ b/app/web/template/who_is_the_lpa_for.gohtml
@@ -26,6 +26,7 @@
         <div class="govuk-buttons">
           {{ template "continue-button" . }}
         </div>
+        {{ template "csrf-field" . }}
       </form>
     </div>
   </div>
