--- a/app/web/template/witnessing_as_certificate_provider.gohtml
+++ b/app/web/template/witnessing_as_certificate_provider.gohtml
@@ -18,6 +18,7 @@
         {{ trFormatHtml .App "cpNotReceivedCodeLink" "CpFirstName" .Lpa.CertificateProvider.FirstNames }}
 
         {{ template "continue-button" . }}
+        {{ template "csrf-field" . }}
       </form>
     </div>
   </div>
