--- a/app/web/template/your_address.gohtml
+++ b/app/web/template/your_address.gohtml
@@ -70,6 +70,7 @@
             {{ end }}
           </fieldset>
         </div>
+        {{ template "csrf-field" . }}
       </form>
     </div>
   </div>
