--- a/app/web/template/your_chosen_identity_options.gohtml
+++ b/app/web/template/your_chosen_identity_options.gohtml
@@ -17,6 +17,7 @@
 
       <form novalidate method="post">
         {{ template "continue-button" . }}
+        {{ template "csrf-field" . }}
       </form>
     </div>
   </div>
