--- a/app/web/template/your_details.gohtml
+++ b/app/web/template/your_details.gohtml
@@ -18,8 +18,6 @@
 
             {{ template "date" (input . "date-of-birth" "dateOfBirth" .Form.Dob "hint" "dateOfBirthHint") }}
 
-            <input type="hidden" name="_csrf" value="{{ .Form.Csrf }}" />
-
             {{ if .DobWarning }}
               <div class="govuk-warning-text">
                 <span class="govuk-warning-text__icon" aria-hidden="true">!</span>
@@ -35,6 +33,7 @@
             {{ template "continue-button" . }}
           </fieldset>
         </div>
+        {{ template "csrf-field" . }}
       </form>
     </div>
   </div>
