--- a/app/web/template/check_your_lpa.gohtml
+++ b/app/web/template/check_your_lpa.gohtml
@@ -62,6 +62,7 @@
         </div>
 
         <button type="submit" class="govuk-button" data-module="govuk-button">{{ tr .App "confirm" }}</button>
+        {{ template "csrf-field" . }}
       </form>
     </div>
   </div>
