--- a/app/web/template/choose_attorneys.gohtml
+++ b/app/web/template/choose_attorneys.gohtml
@@ -37,6 +37,7 @@
             {{ template "continue-button" . }}
           </fieldset>
         </div>
+        {{ template "csrf-field" . }}
       </form>
     </div>
   </div>
