--- a/app/web/template/choose_people_to_notify_address.gohtml
+++ b/app/web/template/choose_people_to_notify_address.gohtml
@@ -67,13 +67,11 @@
               <button name="action" value="lookup" class="govuk-button" data-module="govuk-button">
                 {{ tr .App "findAddress" }}
               </button>
-
-
-
             {{ end }}
 
           </fieldset>
         </div>
+        {{ template "csrf-field" . }}
       </form>
     </div>
   </div>
