--- a/app/web/template/choose_replacement_attorneys.gohtml
+++ b/app/web/template/choose_replacement_attorneys.gohtml
@@ -33,6 +33,7 @@
             {{ template "continue-button" . }}
           </fieldset>
         </div>
+        {{ template "csrf-field" . }}
       </form>
     </div>
   </div>
