--- a/app/web/template/choose_replacement_attorneys_summary.gohtml
+++ b/app/web/template/choose_replacement_attorneys_summary.gohtml
@@ -29,6 +29,7 @@
         <div class="govuk-button-group">
           {{ template "continue-button" . }}
         </div>
+        {{ template "csrf-field" . }}
       </form>
     </div>
   </div>
