--- a/app/web/template/do_you_want_replacement_attorneys.gohtml
+++ b/app/web/template/do_you_want_replacement_attorneys.gohtml
@@ -40,6 +40,7 @@
             </div>
           </fieldset>
         </div>
+        {{ template "csrf-field" . }}
       </form>
     </div>
   </div>
