--- a/app/web/template/how_should_attorneys_make_decisions.gohtml
+++ b/app/web/template/how_should_attorneys_make_decisions.gohtml
@@ -13,7 +13,7 @@
                 {{ tr .App "howShouldAttorneysMakeDecisions" }}
               </h1>
             </legend>
-            
+
             {{ template "error-message" (errorMessage . "decision-type") }}
 
             <div class="govuk-radios {{ if .Errors.Has "decision-type" }}govuk-radios--error{{ end }}" data-module="govuk-radios">
@@ -65,6 +65,7 @@
             {{ template "continue-button" . }}
           </div>
         </div>
+        {{ template "csrf-field" . }}
       </form>
     </div>
   </div>
