--- a/app/web/template/how_would_certificate_provider_prefer_to_carry_out_their_role.gohtml
+++ b/app/web/template/how_would_certificate_provider_prefer_to_carry_out_their_role.gohtml
@@ -41,6 +41,7 @@
 
           {{ template "continue-button" . }}
         </fieldset>
+        {{ template "csrf-field" . }}
       </form>
     </div>
   </div>
