--- a/app/web/template/identity_with_one_login_callback.gohtml
+++ b/app/web/template/identity_with_one_login_callback.gohtml
@@ -40,6 +40,7 @@
 
       <form novalidate method="post">
         {{ template "continue-button" . }}
+        {{ template "csrf-field" . }}
       </form>
     </div>
   </div>
