--- a/app/web/template/identity_with_todo.gohtml
+++ b/app/web/template/identity_with_todo.gohtml
@@ -9,6 +9,7 @@
 
       <form novalidate method="post">
         {{ template "continue-button" . }}
+        {{ template "csrf-field" . }}
       </form>
     </div>
   </div>
