--- a/app/web/template/lpa_type.gohtml
+++ b/app/web/template/lpa_type.gohtml
@@ -26,6 +26,7 @@
         </div>
 
         {{ template "continue-button" . }}
+        {{ template "csrf-field" . }}
       </form>
     </div>
   </div>
