--- a/app/web/template/remove_replacement_attorney.gohtml
+++ b/app/web/template/remove_replacement_attorney.gohtml
@@ -22,10 +22,11 @@
             ) }}
           </div>
         </fieldset>
-          
+
         <div class="govuk-button-group govuk-!-margin-top-4">
           {{ template "continue-button" . }}
         </div>
+        {{ template "csrf-field" . }}
       </form>
     </div>
   </div>
