--- a/app/web/template/select_your_identity_options.gohtml
+++ b/app/web/template/select_your_identity_options.gohtml
@@ -46,6 +46,7 @@
         </div>
 
         {{ template "continue-button" . }}
+        {{ template "csrf-field" . }}
       </form>
     </div>
   </div>
