--- a/app/web/template/witnessing_your_signature.gohtml
+++ b/app/web/template/witnessing_your_signature.gohtml
@@ -16,6 +16,7 @@
         <div class="govuk-button-group">
           {{ template "continue-button" . }}
         </div>
+        {{ template "csrf-field" . }}
       </form>
     </div>
   </div>
