--- a/app/web/template/layout/csrf-field.gohtml
+++ b/app/web/template/layout/csrf-field.gohtml
@@ -1,3 +1,3 @@
 {{ define "csrf-field" }}
-    <input type="hidden" name="{{ .App.CsrfFormName }}" value="{{ .App.CsrfToken }}" />
+    <input type="hidden" name="csrf" value="{{ .App.CsrfToken }}" />
 {{ end }}
