MLPAB-594: Add CSRF protection to all forms (#315)

--- a/app/web/template/sign_your_lpa.gohtml
+++ b/app/web/template/sign_your_lpa.gohtml
@@ -68,6 +68,7 @@
             {{ tr .App "submitSignature" }}
           </button>
         </div>
+        {{ template "csrf-field" . }}
       </form>
     </div>
   </div>
