--- a/app/web/template/choose_people_to_notify.gohtml
+++ b/app/web/template/choose_people_to_notify.gohtml
@@ -16,7 +16,7 @@
             {{ template "input" (input . "last-name" "lastName" .Form.LastName "classes" "govuk-input--width-20") }}
 
             {{ template "name-warning" . }}
-            
+
             {{ template "input" (input . "email" "email" .Form.Email "classes" "govuk-input--width-20" "type" "email" "spellcheck" "false" "autocomplete" "email") }}
 
             <div class="govuk-button-group">
@@ -24,6 +24,7 @@
             </div>
           </fieldset>
         </div>
+        {{ template "csrf-field" . }}
       </form>
     </div>
   </div>
