--- a/app/web/template/choose_replacement_attorneys.gohtml
+++ b/app/web/template/choose_replacement_attorneys.gohtml
@@ -16,16 +16,17 @@
             {{ template "input" (input . "last-name" "lastName" .Form.LastName "classes" "govuk-input--width-20") }}
 
             {{ template "name-warning" . }}
-            
+
             {{ template "input" (input . "email" "email" .Form.Email "classes" "govuk-input--width-20" "type" "email" "spellcheck" "false" "autocomplete" "email") }}
 
             {{ template "date" (input . "date-of-birth" "dateOfBirth" .Form.Dob "hint" "dateOfBirthHint") }}
 
             {{ template "dob-warning" . }}
-            
+
             {{ template "continue-button" . }}
           </fieldset>
         </div>
+        {{ template "csrf-field" . }}
       </form>
     </div>
   </div>
