--- a/app/web/template/your_details.gohtml
+++ b/app/web/template/your_details.gohtml
@@ -16,16 +16,17 @@
             {{ template "input" (input . "last-name" "lastName" .Form.LastName "classes" "govuk-input--width-20") }}
 
             {{ template "name-warning" . }}
-            
+
             {{ template "input" (input . "other-names" "otherNames" .Form.OtherNames "classes" "govuk-input--width-20") }}
 
             {{ template "date" (input . "date-of-birth" "dateOfBirth" .Form.Dob "hint" "dateOfBirthHint") }}
 
             {{ template "dob-warning" . }}
-            
+
             {{ template "continue-button" . }}
           </fieldset>
         </div>
+        {{ template "csrf-field" . }}
       </form>
     </div>
   </div>
